# minimal

./: .gitignore  README.md
back/: Cargo.toml  requests.http
back/migrations/2024-04-25-110845_create_users/: up.sql
back/migrations/2024-04-30-071946_create_posts/: down.sql  up.sql
back/src/: cors.rs  db.rs  main.rs  schema.rs  script.rs
back/src/controllers/: directory.rs  file.rs  mod.rs  post.rs  topic.rs  user.rs
back/src/errors/: response.rs
back/src/models/: directory.rs  file.rs  mod.rs  post.rs  response.rs  topic.rs  user.rs
back/src/routes/: directory.rs  file.rs  post.rs  topic.rs  user.rs
front/: index.html  package.json  tailwind.config.js
front/src/: App.tsx  Root.tsx  main.tsx  models.tsx  types.tsx
front/src/components/: AuthProvider.tsx  Form.tsx  History.tsx  Input.tsx  Prefix.tsx  Terminal.tsx
front/src/contexts/: AppProvider.tsx  AuthProvider.tsx  TerminalProvider.tsx
front/src/hooks/: useCommand.tsx  useDir.tsx  useFocus.tsx  useKeyboard.tsx  useLabels.tsx  useTerminalState.tsx
front/src/utils/: commands.tsx  fetchData.tsx  funcs.tsx
