[package]
name = "minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.38", features = ["alloc"]}
diesel = {version = "2.1.6", features = ["postgres"]}
dotenv = "0.15.0"
rocket = "0.5.0"
serde = "1.0.198"
serde_json = "1.0.116"
