[package]
name = "minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.38", features = ["alloc", "serde"]}
diesel = {version = "2.1.6", features = ["postgres", "chrono", "r2d2"]}
dotenv = "0.15.0"
rand = "0.8.5"
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.198"
serde_json = "1.0.116"
sha2 = "0.10.8"
